--- a/clicky-game/src/components/image/style.css
+++ b/clicky-game/src/components/image/style.css
@@ -21,3 +21,15 @@
     -o-transition: .1s;
     transition: .1s
 }
+
+@media (max-width:750px) {
+    .click-item {
+        margin: 10px
+    }
+}
+
+@media (max-width:500px) {
+    .click-item {
+        margin: 10px
+    }
+}
