--- a/clicky-game/src/index.css
+++ b/clicky-game/src/index.css
@@ -1,3 +1,18 @@
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: sans-serif
+}
+
+#root,
+#root>div,
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
